<resources>
    <string name="app_name" translatable="false">Schedule</string>
    <string name="btn_enter">ENTER</string>
    <string name="hint_email" translatable="false">Email:</string>
    <string name="hint_password" translatable="false">Password:</string>
    <string name="textview_log_in" translatable="false">Log in</string>
    <string name="toast_loginError">EMAIL/PASSWORD NOT FOUND. TRY AGAIN</string>

    <string name="title_schedule">Schedule</string>
    <string name="title_session">Session</string>
    <string name="title_professors">Professors</string>
    <string name="title_change">Settings</string>
    <string name="title_add">Add</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="text_log_out">   Log out</string>
    <string name="text_name">Title:</string>
    <string name="cab_dist">Cab/Dist</string>
    <string name="time">Time:</string>
    <string name="text_type_inf">Type of information:</string>
    <string name="text_day_of_week">Day of week</string>
    <string name="tt" translatable="false">Title</string>
    <string name="tv_change_select">Note:</string>

    <string-array name="type_of_information">
        <item>Schedule</item>
        <item>Session</item>
        <item>Professor</item>
    </string-array>

    <string-array name="time">
        <item>9:30 - 11:05</item>
        <item>11:20 - 12:55</item>
        <item>13:10 - 14:45</item>
        <item>15:25 - 17:00</item>
        <item>17:15 - 18:50</item>
    </string-array>

    <string-array name="day_of_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>

    <string-array name="type_of_schedule">
        <item>Lecture</item>
        <item>Practical</item>
        <item>Laboratory</item>
    </string-array>
    <string name="date">Date exam</string>
    <string name="type_of_occupation">Type of occupation</string>
    <string name="tv_type_schedule">Type Schedule</string>
    <string name="et_name_ex">Name of exam</string>
    <string name="et_date_exam">Date</string>
    <string name="et_time_exam">Time</string>
    <string name="et_format_exam">Format</string>
    <string name="et_name_prof">Name professor</string>
    <string name="et_name_subj">Name subject</string>
    <string name="et_type_subj">Type of subject</string>


</resources>